--- a/res/layout/turn_zone.xml
+++ b/res/layout/turn_zone.xml
@@ -66,7 +66,7 @@
 				i3d:layout_width="wrap_content"
 				i3d:layout_height="match_parent">
 				<Button
-		                i3d:id="endTurnButton"
+		                i3d:id="turnPhaseButton"
 		                i3d:style="bigButton@styles"
 		                i3d:layout_width="match_parent"
 		                i3d:layout_height="wrap_content"
@@ -86,6 +86,7 @@
 			i3d:layout_width="255px"
 			i3d:layout_height="100%">
 	 			<TextView
+ 			i3d:id="todoTextView"
 	        i3d:text="Choose to keep or discard this card."
 	        i3d:layout_marginTop="5px"
 	        i3d:layout_width = "match_parent"
@@ -93,36 +94,36 @@
 	        i3d:layout_marginBottom="5px"
 	        i3d:font="title-bold@fonts"
 	         />
-	         <LinearLayout
-	         i3d:orientation="horizontal"
-	         i3d:layout_width="wrap_content"
-	         i3d:layout_marginRight="20px"
-				i3d:layout_height="wrap_content">
-				<Button
-		                i3d:id="keepButton"
-		                i3d:style="bigButton@styles"
-		                i3d:layout_width="wrap_content"
-		                i3d:layout_height="wrap_content"
-		                i3d:layout_marginBottom="0px"
-		                i3d:layout_marginLeft="10px"
-		                i3d:layout_marginRight="10px"
-		                i3d:layout_marginTop="10px"
-		                i3d:text="Keep"
-		                i3d:help="newGameButtonHelp@help/mainmenu"
-		                 />
-		                 <Button
-		                i3d:id="discardButton"
-		                i3d:style="bigButton@styles"
-		                i3d:layout_width="wrap_content"
-		                i3d:layout_height="wrap_content"
-		                i3d:layout_marginBottom="0px"
-		                i3d:layout_marginLeft="10px"
-		                i3d:layout_marginRight="10px"
-		                i3d:layout_marginTop="10px"
-		                i3d:text="Discard"
-		                i3d:help="newGameButtonHelp@help/mainmenu"
-		                 />
-				</LinearLayout>
+<!-- 	         <LinearLayout -->
+<!-- 	         i3d:orientation="horizontal" -->
+<!-- 	         i3d:layout_width="wrap_content" -->
+<!-- 	         i3d:layout_marginRight="20px" -->
+<!-- 				i3d:layout_height="wrap_content"> -->
+<!-- 				<Button -->
+<!-- 		                i3d:id="keepButton" -->
+<!-- 		                i3d:style="bigButton@styles" -->
+<!-- 		                i3d:layout_width="wrap_content" -->
+<!-- 		                i3d:layout_height="wrap_content" -->
+<!-- 		                i3d:layout_marginBottom="0px" -->
+<!-- 		                i3d:layout_marginLeft="10px" -->
+<!-- 		                i3d:layout_marginRight="10px" -->
+<!-- 		                i3d:layout_marginTop="10px" -->
+<!-- 		                i3d:text="Keep" -->
+<!-- 		                i3d:help="newGameButtonHelp@help/mainmenu" -->
+<!-- 		                 /> -->
+<!-- 		                 <Button -->
+<!-- 		                i3d:id="discardButton" -->
+<!-- 		                i3d:style="bigButton@styles" -->
+<!-- 		                i3d:layout_width="wrap_content" -->
+<!-- 		                i3d:layout_height="wrap_content" -->
+<!-- 		                i3d:layout_marginBottom="0px" -->
+<!-- 		                i3d:layout_marginLeft="10px" -->
+<!-- 		                i3d:layout_marginRight="10px" -->
+<!-- 		                i3d:layout_marginTop="10px" -->
+<!-- 		                i3d:text="Discard" -->
+<!-- 		                i3d:help="newGameButtonHelp@help/mainmenu" -->
+<!-- 		                 /> -->
+<!-- 				</LinearLayout> -->
 	 			
 	 		</LinearLayout>
 	</LinearLayout>
