--- a/res/layout/played_cards_zone.xml
+++ b/res/layout/played_cards_zone.xml
@@ -13,6 +13,17 @@
         i3d:text="Played cards"
         i3d:layout_marginBottom="5px" />
 
+	<ScrollView
+        i3d:id="playedScrollView"
+        i3d:layout_width="100%"
+        i3d:layout_height="250px"
+        i3d:scroll_axis="horizontal"
+        i3d:layout_marginTop="10px"
+        i3d:layout_marginBottom="10px"
+        i3d:layout_marginLeft="10px"
+       	i3d:layout_marginRight="10px"
+        
+        i3d:scroll_limits="strict" >
 	<LinearLayout
 	i3d:id="playedCardsLinearLayout"
 	i3d:layout_width="wrap_content"
@@ -21,4 +32,5 @@
 	>
 	
 	</LinearLayout>
+	</ScrollView>
 </LinearLayout>
