--- a/res/layout/lobbymenu.xml
+++ b/res/layout/lobbymenu.xml
@@ -26,7 +26,7 @@
                 i3d:layout_width="match_parent"
                 i3d:layout_marginBottom="20px"
                 i3d:layout_marginTop="100px"
-                i3d:text="Create game"
+                i3d:text="newGameButton@strings"
                 i3d:help="newGameButtonHelp@help/mainmenu"
                  />
 
@@ -35,7 +35,7 @@
                 i3d:style="bigButton@styles"
                 i3d:layout_width="match_parent"
                 i3d:layout_marginBottom="20px"
-                i3d:text="Join game" />
+                i3d:text="continueGameButton@strings" />
             
         </LinearLayout>
     </LinearLayout>
