[DEV] begin to refactor ui

--- a/res/layout/board.xml
+++ b/res/layout/board.xml
@@ -9,106 +9,32 @@
         	i3d:id="leftZone"
             i3d:layout_width="100%"
             i3d:layout_height="match_parent"
-            i3d:orientation="horizontal" >
+            i3d:orientation="vertical" >
+   		<View
+      			i3d:id="supplyZone"
+   				i3d:layout_width="match_parent"
+	   	        i3d:layout_height="wrap_content"
+      			i3d:ref="main@layout/supply_zone" />
+    	
     	<LinearLayout
-        	i3d:id="supplyZoneAndHandZone"
-            i3d:layout_width="match_parent"
-            i3d:layout_height="wrap_content"
-            i3d:orientation="horizontal" >
-        </LinearLayout>
-    
-    
-    </LinearLayout>
-    <LinearLayout
-        	i3d:id="rightZone"
-            i3d:layout_width="wrap_content"
-            i3d:layout_height="match_parent"
-            i3d:orientation="horizontal" >
-    
-    
-    
-    </LinearLayout>
-    
-    
-    
-        <LinearLayout
-        	i3d:id="supplyZoneAndDetailZone"
+        	i3d:id="playZoneAndDetailZone"
             i3d:layout_width="match_parent"
             i3d:layout_height="100%"
             i3d:orientation="horizontal" >
-        
-                    <View
-            			i3d:id="supplyZone"
-           				 i3d:layout_width="100%"
-	        	        i3d:layout_height="match_parent"
-	            	    i3d:layout_marginBottom="0px"
-	                	i3d:layout_marginTop="10px"
-            			i3d:ref="main@layout/supply_zone" />
-       
-                 
-                    <View
-            			i3d:id="detailZone"
-            			i3d:layout_width="275px"
-               			i3d:layout_height="match_parent"
-               			i3d:layout_marginBottom="0px"
-                		i3d:layout_marginTop="10px"
-                		i3d:layout_marginLeft="10px"
-                		i3d:layout_marginRight="10px"
-            			i3d:ref="main@layout/details_zone" />
-                 
-        </LinearLayout>
-        <LinearLayout
-        	i3d:id="playZoneAndWaitZone"
-            i3d:layout_width="match_parent"
-            i3d:layout_height="wrap_content"
-            i3d:orientation="vertical" >
             
-               <View
-        i3d:layout_width="match_parent"
-        i3d:layout_height="20px"
-        i3d:layout_gravity_x="center"
-        i3d:ref="main@layout/separator_horizontal" />
-            
-             <LinearLayout
-        	i3d:id="playZone"
-            i3d:layout_width="100%"
-            i3d:layout_height="wrap_content"
-            i3d:orientation="horizontal" >
-	      
-	      
-	      
-                 <View
-            i3d:id="playedCardZone"
-            i3d:layout_width="100%"
-                i3d:layout_height="wrap_content"
-            i3d:ref="main@layout/played_cards_zone" />
-            
-            <View
-            i3d:id="turnZone"
-            i3d:layout_width="500px"
-                i3d:layout_height="wrap_content"
-            i3d:ref="main@layout/turn_zone" />
-            
-            </LinearLayout>
-               <View
-        i3d:layout_width="match_parent"
-        i3d:layout_height="20px"
-        i3d:layout_gravity_x="center"
-        i3d:ref="main@layout/separator_horizontal" />
             
             <LinearLayout
-        	i3d:id="waitZone"
+        	i3d:id="playZone"
+            i3d:layout_width="100%"
+            i3d:layout_height="match_parent"
+            i3d:orientation="vertical" >
+    			
+    			<LinearLayout
+        	i3d:id="turnZone"
             i3d:layout_width="match_parent"
             i3d:layout_height="wrap_content"
             i3d:orientation="horizontal" >
-            
-              <View
-            i3d:id="handZone"
-            i3d:layout_width="100%"
-                i3d:layout_height="wrap_content"
-            i3d:ref="main@layout/hand_zone" />
-              
-                 <View
+    			<View
             i3d:id="deckZone"
             i3d:layout_width="wrap_content"
                 i3d:layout_height="wrap_content"
@@ -118,6 +44,53 @@
             i3d:layout_width="wrap_content"
                 i3d:layout_height="wrap_content"
             i3d:ref="main@layout/discard_pile_zone" />
-            </LinearLayout>
-        </LinearLayout>
+            
+            	<View
+            i3d:id="turnOrderZone"
+            i3d:layout_width="wrap_content"
+                i3d:layout_height="wrap_content"
+            i3d:ref="main@layout/turn_zone" />
+            
+    			</LinearLayout>
+    			
+    			
+    			
+    			<View
+            i3d:id="handZone"
+            i3d:layout_width="100%"
+                i3d:layout_height="wrap_content"
+            i3d:ref="main@layout/hand_zone" />
+ 			</LinearLayout>
+    
+    		<View
+     			i3d:id="detailZone"
+     			i3d:layout_width="375px"
+        			i3d:layout_height="match_parent"
+        			i3d:layout_marginBottom="0px"
+         		i3d:layout_marginTop="10px"
+         		i3d:layout_marginLeft="10px"
+         		i3d:layout_marginRight="10px"
+     			i3d:ref="main@layout/details_zone" />
+    	</LinearLayout>
+    
+    </LinearLayout>
+    <LinearLayout
+        	i3d:id="rightZone"
+            i3d:layout_width="wrap_content"
+            i3d:layout_height="match_parent"
+            i3d:orientation="vertical" >
+    	
+    	<View
+            i3d:id="objectiveZone"
+            i3d:layout_width="100%"
+                i3d:layout_height="wrap_content"
+            i3d:ref="main@layout/objective_zone" />
+    
+    	<View
+            i3d:id="playedCardZone"
+            i3d:layout_width="100%"
+                i3d:layout_height="wrap_content"
+            i3d:ref="main@layout/played_cards_zone" />
+    
+    </LinearLayout>
 </LinearLayout>
