--- a/res/layout/bigCardPlaceHolder.xml
+++ b/res/layout/bigCardPlaceHolder.xml
@@ -2,11 +2,11 @@
 <LinearLayout
     i3d:id="main"
     i3d:style="cardFront@styles"
-    i3d:orientation="vertical" >
+    i3d:orientation="vertical"
+    i3d:layout_height="250px" >
 
 	  <TextView
 		  i3d:id="titleTextView"
-        i3d:text="Saturn V"
         i3d:layout_marginTop="5px"
         i3d:layout_width = "match_parent"
         i3d:gravity="center"
@@ -18,6 +18,5 @@
          	i3d:layout_height="94px"
          	i3d:layout_marginLeft="5px"
          	i3d:layout_marginRight="5px"
-         	i3d:ref="saturn5@photos" 
          	/>
 </LinearLayout>
