--- a/res/layout/board.xml
+++ b/res/layout/board.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+i3d:id="main"
+    i3d:layout_width="match_parent"
+    i3d:layout_height="match_parent"
+>
+
+ <Drawable
+ i3d:layout_width="match_parent"
+    i3d:layout_height="match_parent"
+	   	i3d:ref="background@photos"
+	   	 />
+
 <LinearLayout
-    i3d:id="main"
     i3d:layout_width="match_parent"
     i3d:layout_height="match_parent"
     i3d:orientation="horizontal" >
@@ -72,7 +83,8 @@
     </LinearLayout>
     <LinearLayout
         	i3d:id="rightZone"
-            i3d:layout_width="340px"
+            i3d:layout_width="350px"
+            i3d:layout_paddingTop="5px"
             i3d:layout_height="match_parent"
             i3d:orientation="vertical" >
     	
@@ -90,3 +102,5 @@
     
     </LinearLayout>
 </LinearLayout>
+
+</RelativeLayout>
