--- a/res/layout/card.xml
+++ b/res/layout/card.xml
@@ -18,6 +18,7 @@
          	i3d:layout_height="94px"
          	i3d:layout_marginLeft="5px"
          	i3d:layout_marginRight="5px"
-         	i3d:ref="saturn5@photos" 
+         	i3d:ref="saturn5@photos"
+         	i3d:id="imageDrawable"
          	/>
 </LinearLayout>
