--- a/res/layout/bigCard.xml
+++ b/res/layout/bigCard.xml
@@ -98,6 +98,23 @@
         i3d:layout_marginLeft="65px"
 	   	 />
     
-         
+       <Drawable
+     	i3d:id="cardPvFlagDrawable"
+	   	i3d:ref="cardPvFlag@card"
+	   	i3d:layout_marginTop="168px"
+    	i3d:layout_marginLeft="-7px"
+     	i3d:layout_width="60px"
+        i3d:layout_height="47px"
+	   	 />    
+        <TextView
+	i3d:id="pvTextView"
+     i3d:text="2"
+     i3d:layout_width = "30px"
+     i3d:layout_height="47px"
+     i3d:layout_marginTop="168px"
+   	 i3d:layout_marginLeft="7px"
+     i3d:gravity="center"
+     i3d:style="pv@styles"
+   />     
         
 </RelativeLayout>
