--- a/res/layout/logo_text.xml
+++ b/res/layout/logo_text.xml
@@ -4,14 +4,14 @@
     i3d:layout_width="wrap_content"
     i3d:layout_height="wrap_content" >
 
-    <View
-        i3d:id="logo"
-        i3d:layout_width="83px"
-        i3d:layout_height="83px"
-        i3d:layout_gravity_y="bottom"
-        i3d:layout_marginBottom="23px"
-        i3d:layout_marginRight="10px"
-        i3d:ref="main@layout/logo" />
+<!--     <View -->
+<!--         i3d:id="logo" -->
+<!--         i3d:layout_width="83px" -->
+<!--         i3d:layout_height="83px" -->
+<!--         i3d:layout_gravity_y="bottom" -->
+<!--         i3d:layout_marginBottom="23px" -->
+<!--         i3d:layout_marginRight="10px" -->
+<!--         i3d:ref="main@layout/logo" /> -->
 
     <TextView
         i3d:text="title_first@strings"
