--- a/res/layout/mainmenu.xml
+++ b/res/layout/mainmenu.xml
@@ -36,19 +36,19 @@
                 i3d:help="newGameButtonHelp@help/mainmenu"
                  />
 
-            <Button
-                i3d:id="continueGameButton"
-                i3d:style="bigButton@styles"
-                i3d:layout_width="match_parent"
-                i3d:layout_marginBottom="20px"
-                i3d:text="continueGameButton@strings" />
+<!--             <Button -->
+<!--                 i3d:id="continueGameButton" -->
+<!--                 i3d:style="bigButton@styles" -->
+<!--                 i3d:layout_width="match_parent" -->
+<!--                 i3d:layout_marginBottom="20px" -->
+<!--                 i3d:text="continueGameButton@strings" /> -->
 
-            <Button
-                i3d:id="loadGameButton"
-                i3d:style="bigButton@styles"
-                i3d:layout_width="match_parent"
-                i3d:layout_marginBottom="20px"
-                i3d:text="loadGameButton@strings" />
+<!--             <Button -->
+<!--                 i3d:id="loadGameButton" -->
+<!--                 i3d:style="bigButton@styles" -->
+<!--                 i3d:layout_width="match_parent" -->
+<!--                 i3d:layout_marginBottom="20px" -->
+<!--                 i3d:text="loadGameButton@strings" /> -->
         </LinearLayout>
     </LinearLayout>
 
